--- a/public/main.html
+++ b/public/main.html
@@ -11,6 +11,8 @@
       .col img{
         border:2px solid black;
         border-radius: 10px;
+        height: 50px;
+        width: 50px;
       }
     </style>
     <title>Hello, world!</title>
@@ -23,23 +25,42 @@
       
         <div class="row" >
           <div class="col-md-auto"><img class="card-img-top" style="border:1px solid rgb(172, 172, 182); border-radius: 15px;" src="https://ddragon.leagueoflegends.com/cdn/9.13.1/img/champion/Zyra.png" alt=""></div>
-          <div class="col-md-auto"><h1 class=" text-danger" style="font-size: 1.8rem;">Zyra</h1>
+          <div class="col-md-auto">
+              <div class="row pt-2">
+                  <div class="col-md-auto">
+                    <button class="btn btn-outline-secondary">Mid</button>
+                    <button class="btn btn-outline-secondary">Top</button>
+                    <button class="btn btn-outline-secondary">Adc</button>
+                    <button class="btn btn-secondary">Support</button>
+                  </div>
+                </div>
+          <h1 class=" text-danger" style="font-size: 1.8rem;">Zyra</h1>
           <h6 style="color:gray;">Dikenlerin Yükselişi</h6>
-          <div class="row">
-            <div class="col"><img src="https://ddragon.leagueoflegends.com/cdn/9.13.1/img/item/3151.png" alt=""></div>
-            <div class="col"><img src="https://ddragon.leagueoflegends.com/cdn/9.13.1/img/item/3165.png" alt=""></div>
-            <div class="col"><img src="https://ddragon.leagueoflegends.com/cdn/9.13.1/img/item/3116.png" alt=""></div>
-            <div class="col"><img src="https://ddragon.leagueoflegends.com/cdn/9.13.1/img/item/3157.png" alt=""></div>
-            <div class="col"><img src="https://ddragon.leagueoflegends.com/cdn/9.13.1/img/item/3092.png" alt=""></div>
-            <div class="col"><img src="https://ddragon.leagueoflegends.com/cdn/9.13.1/img/item/3041.png" alt=""></div>
-            <div class="col"></div>
-            <div class="col"></div>
-            <div class="col"><img src="https://ddragon.leagueoflegends.com/cdn/9.13.1/img/spell/SummonerFlash.png" alt=""></div>
-            <div class="col"><img src="https://ddragon.leagueoflegends.com/cdn/9.13.1/img/spell/SummonerDot.png" alt=""></div>
-          </div>
+
           </div>
         </div>
-
+        
+        <hr>
+        <h3 class="text-center text-danger">Item Build</h3>
+        <div class="row pt-3 pl-5">
+          <div class="col-md-9">
+              <div class="row">
+                  <div class="col"><img src="https://ddragon.leagueoflegends.com/cdn/9.13.1/img/item/3151.png" alt=""></div>
+                  <div class="col"><img src="https://ddragon.leagueoflegends.com/cdn/9.13.1/img/item/3165.png" alt=""></div>
+                  <div class="col"><img src="https://ddragon.leagueoflegends.com/cdn/9.13.1/img/item/3116.png" alt=""></div>
+                  <div class="col"><img src="https://ddragon.leagueoflegends.com/cdn/9.13.1/img/item/3157.png" alt=""></div>
+                  <div class="col"><img src="https://ddragon.leagueoflegends.com/cdn/9.13.1/img/item/3092.png" alt=""></div>
+                  <div class="col"><img src="https://ddragon.leagueoflegends.com/cdn/9.13.1/img/item/3041.png" alt=""></div>
+                  <div class="col"></div>
+                  <div class="col"></div>
+                  <div class="col"><img src="https://ddragon.leagueoflegends.com/cdn/9.13.1/img/spell/SummonerFlash.png" alt=""></div>
+                  <div class="col"><img src="https://ddragon.leagueoflegends.com/cdn/9.13.1/img/spell/SummonerDot.png" alt=""></div>
+                </div>
+          </div>
+        </div>
+        <hr>
+        <h3 class="text-center text-danger">Rünler</h3>
+          <p class="text-center">Çok Yakında...!</p>
         <hr>
 
         <div class="row">
